--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,24 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <form method = "POST" action = "/team">
+     <label for = "name">Team name:</label>
+     <input type = "text" name = "name" id = "name">
+     <label for = "coach">Coach:</label>
+     <input type = "text" name = "coach" id = "coach">
+     <label for = "pg">Point Guard:</label>
+     <input type = "text" name = "pg" id = "pg">
+     <label for = "sg">Shooting Guard:</label>
+     <input type = "text" name = "sg" id = "sg">
+     <label for = "sf">Small Forward:</label>
+     <input type = "text" name = "sf" id = "sf">
+     <label for = "pf">Power Forward:</label>
+     <input type = "text" name = "pf" id = "pf">
+     <label for = "c">Center:</label>
+     <input type = "text" name = "c" id = "c">
+     <input type = "submit" value = "Submit" id = "submit"> 
+   </form>
+   
  </body>
 </html>
 
