Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -4,23 +4,24 @@
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
  </head>
- <body>
+ <body
+   <h1>Create a Basketball Team!</h1>
    <form method = "POST" action = "/team">
      <label for = "name">Team name:</label>
-     <input type = "text" name = "name" id = "name">
+     <p><input type = "text" name = "name" id = "name"></p>
      <label for = "coach">Coach:</label>
-     <input type = "text" name = "coach" id = "coach">
+     <p><input type = "text" name = "coach" id = "coach"></p>
      <label for = "pg">Point Guard:</label>
-     <input type = "text" name = "pg" id = "pg">
+     <p><input type = "text" name = "pg" id = "pg"></p>
      <label for = "sg">Shooting Guard:</label>
-     <input type = "text" name = "sg" id = "sg">
+     <p><input type = "text" name = "sg" id = "sg"></p>
      <label for = "sf">Small Forward:</label>
-     <input type = "text" name = "sf" id = "sf">
+     <p><input type = "text" name = "sf" id = "sf"></p>
      <label for = "pf">Power Forward:</label>
-     <input type = "text" name = "pf" id = "pf">
+     <p><input type = "text" name = "pf" id = "pf"></p>
      <label for = "c">Center:</label>
-     <input type = "text" name = "c" id = "c">
-     <input type = "submit" value = "Submit" id = "submit"> 
+     <p><input type = "text" name = "c" id = "c"></p>
+     <p><input type = "submit" value = "Submit" id = "submit"></p> 
    </form>
    
  </body>
