--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,12 +7,12 @@
  <body
    <h1>Create a Basketball Team!</h1>
    <form method = "POST" action = "/team">
-     <label for = "name">Team name:</label>
-     <p><input type = "text" name = "name" id = "name"></p>
-     <label for = "coach">Coach:</label>
-     <p><input type = "text" name = "coach" id = "coach"></p>
+     <p><label for = "name">Team name:</label>
+     <input type = "text" name = "name" id = "name"></p>
+     <p><label for = "coach">Coach:</label>
+     <input type = "text" name = "coach" id = "coach"></p>
      <label for = "pg">Point Guard:</label>
-     <p><input type = "text" name = "pg" id = "pg"></p>
+     <input type = "text" name = "pg" id = "pg"></p>
      <label for = "sg">Shooting Guard:</label>
      <p><input type = "text" name = "sg" id = "sg"></p>
      <label for = "sf">Small Forward:</label>
