--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -11,16 +11,16 @@
      <input type = "text" name = "name" id = "name"></p>
      <p><label for = "coach">Coach:</label>
      <input type = "text" name = "coach" id = "coach"></p>
-     <label for = "pg">Point Guard:</label>
+     <p><label for = "pg">Point Guard:</label>
      <input type = "text" name = "pg" id = "pg"></p>
-     <label for = "sg">Shooting Guard:</label>
-     <p><input type = "text" name = "sg" id = "sg"></p>
-     <label for = "sf">Small Forward:</label>
-     <p><input type = "text" name = "sf" id = "sf"></p>
-     <label for = "pf">Power Forward:</label>
-     <p><input type = "text" name = "pf" id = "pf"></p>
-     <label for = "c">Center:</label>
-     <p><input type = "text" name = "c" id = "c"></p>
+     <p><label for = "sg">Shooting Guard:</label>
+     <input type = "text" name = "sg" id = "sg"></p>
+     <p><label for = "sf">Small Forward:</label>
+     <input type = "text" name = "sf" id = "sf"></p>
+     <p><label for = "pf">Power Forward:</label>
+     <input type = "text" name = "pf" id = "pf"></p>
+     <p><label for = "c">Center:</label>
+     <input type = "text" name = "c" id = "c"></p>
      <p><input type = "submit" value = "Submit" id = "submit"></p> 
    </form>
    
