Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Basketball Team Signup</title>
  </head>
- <body
+ <body>
    <h1>Create a Basketball Team!</h1>
    <form method = "POST" action = "/team">
      <p><label for = "name">Team name:</label>
