--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
   <h1>Team Name: <%= params[:name] %></h1>
-  <h2>Coach: <%= params[</h2>
+  <h2>Coach: <%= params[:coach] %></h2>
 
 
  </body>
